--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -4,43 +4,51 @@
 	android:orientation="horizontal"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
-	android:padding="15dip">
+	android:padding="15dip"
+	android:weightSum="1">
 
 	<LinearLayout
-		android:orientation="vertical"
-		android:layout_width="fill_parent"
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_gravity="center"
+		android:layout_gravity="center_vertical"
 		android:paddingLeft="20dip"
-		android:paddingRight="20dip">
+		android:paddingRight="20dip"
+		android:layout_weight="4.82"
+		android:orientation="vertical">
 		<TextView
 			android:text="@string/app_name"
 			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_gravity="center"
+			android:layout_height="match_parent"
+			android:layout_gravity="center_horizontal"
 			android:layout_marginBottom="20dip"
+			android:textColor="#FFFFFF"
 			android:textSize="24.5sp"/>
-		<TableLayout
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
+		<LinearLayout
+			android:orientation="vertical"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
 			android:layout_gravity="center"
 			android:stretchColumns="*">
-			<TableRow>
 				<Button
 					android:id="@+id/new_button"
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
 					android:text="@string/new_game_label"/>
 				<Button
 					android:id="@+id/how_to_play_button"
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
 					android:text="@string/how_to_play_label"/>
-			</TableRow>
-			<TableRow>
 				<Button
 					android:id="@+id/about_button"
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
 					android:text="@string/about_label"/>
 				<Button
 					android:id="@+id/settings"
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
 					android:text="@string/settings_label"/>
-			</TableRow>
-		</TableLayout>
+		</LinearLayout>
 	</LinearLayout>
 </LinearLayout>
