--- a/wear/src/main/res/layout/rect_activity_main.xml
+++ b/wear/src/main/res/layout/rect_activity_main.xml
@@ -1,15 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-							xmlns:tools="http://schemas.android.com/tools"
-							android:layout_width="match_parent"
-							android:layout_height="match_parent"
-							android:orientation="vertical"
-							tools:context=".MainActivity"
-							tools:deviceIds="wear_square">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+								xmlns:tools="http://schemas.android.com/tools"
+								android:layout_width="match_parent"
+								android:layout_height="match_parent"
+								android:orientation="vertical"
+								tools:context=".MainActivity"
+								tools:deviceIds="wear_square">
+
+	<ImageView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:id="@+id/imageView"/>
 
 	<TextView
 		android:id="@+id/text"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="@string/hello_square"/>
-</LinearLayout>
+		android:text="@string/score_label"
+		android:layout_alignParentBottom="true"
+		android:layout_alignParentLeft="true"
+		android:layout_margin="8dp"/>
+
+</RelativeLayout>
