--- a/mobile/src/main/res/layout/activity_maps.xml
+++ b/mobile/src/main/res/layout/activity_maps.xml
@@ -1,17 +1,22 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
+	android:orientation="vertical"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 	<TextView
 		android:id="@+id/score_id"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="@string/score_text"/>
-<fragment
+		android:text="@string/score_text"
+		android:layout_alignParentEnd="false"
+		android:layout_gravity="center"
+		android:textSize="30dp" />
+	<fragment
 					xmlns:map="http://schemas.android.com/apk/res-auto"
 					android:layout_width="match_parent"
 					android:layout_height="match_parent"
 					android:id="@+id/map"
 					tools:context="com.tigeroakes.pacmanmaps.MapsActivity"
 					android:name="com.google.android.gms.maps.SupportMapFragment"/>
-</RelativeLayout>
+
+</LinearLayout>
